forgot to add v2.

--- a/views/main/index.html
+++ b/views/main/index.html
@@ -1,5 +1,6 @@
+<button onclick="setView('v2');">Press me</button>
 <p>This is the main view. Please change me, I can be found in 
-	<code>views/main/html.html</code></p>
+	<code>views/main/index.html</code></p>
 <p>To change the view, add another view and call the javascript function
 	<code>setView('myView');</code> (of course you need to change myView). 
 	(for example you could use the code
